objects/ASI_CRM_Supplier__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Suppliers (Supplier)</relationshipLabel>
        <relationshipName>Suppliers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Supplier</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Supplier ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Supplier</fullName>
        <active>true</active>
        <label>Supplier (MY)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>